--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -961,6 +961,17 @@ font-family: 'Playfair Display', serif;
         font-family: 'Bree Serif', serif;
         text-transform: uppercase;
     }
+    
+    .post-rendered::after {
+        font-family: "Font Awesome 5 Free";
+        font-weight: 900;
+        content: "\f007";
+        padding: 15px;
+        background: #e7d117;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
     /* HOVER EFFECT*/
     
     .post-rendered:hover .comentarios {
