--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -965,8 +965,13 @@ font-family: 'Playfair Display', serif;
     .post-rendered::after {
         font-family: "Font Awesome 5 Free";
         font-weight: 900;
-        content: "\f007";
-        padding: 15px;
+        content: "\f1e2";
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-self: center;
+        color: #fff;
         background: #e7d117;
         position: absolute;
         top: 0;
