--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1091,7 +1091,7 @@ font-family: 'Playfair Display', serif;
     .loader,
     .loader:before,
     .loader:after {
-        background: #ffffff;
+        background: #e7d117;
         -webkit-animation: load1 1s infinite ease-in-out;
         animation: load1 1s infinite ease-in-out;
         width: 1em;
@@ -1099,7 +1099,7 @@ font-family: 'Playfair Display', serif;
     }
     
     .loader {
-        color: #ffffff;
+        color: #e7d117;
         text-indent: -9999em;
         margin: 88px auto;
         position: relative;
