--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1003,7 +1003,7 @@ font-family: 'Playfair Display', serif;
     /*--------- SECTION INSTAGRAM */
     /* ---------------------------*/
     
-    .section-instagram {
+    .instagram-section {
         background: #2d2d2d;
         display: grid;
         grid-template-columns: 1fr 3fr
