--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1009,6 +1009,10 @@ font-family: 'Playfair Display', serif;
         grid-template-columns: 2fr 3fr;
         padding: 30px;
     }
+    
+    .instagram-section .instagram-data h4 {
+        color: #e7d117;
+    }
     /* SECTION INSTAGRAM END*/
     /* ---------------------------*/
     /*--------- FOOTER */
