--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1106,6 +1106,7 @@ button {
     display: grid;
     grid-template-columns: 2fr 3fr;
     padding: 30px;
+    position: relative;
 }
 
 .instagram-section::before {
