--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1187,6 +1187,12 @@ button {
     position: absolute;
 }
 
+.videos-title-list .profile-data {
+    display: flex;
+}
+
+.videos-pic {}
+
 
 /* ---------------------------*/
 
