--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1187,7 +1187,7 @@ button {
     position: absolute;
 }
 
-.videos-title-list .profile-data {
+.videos-title-list .videos-title {
     display: flex;
 }
 
