--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1191,7 +1191,12 @@ button {
     display: flex;
 }
 
-.videos-pic {}
+.videos-pic {
+    display: block;
+    width: 50px;
+    box-sizing: content-box;
+    padding: 10px;
+}
 
 
 /* ---------------------------*/
