--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1218,6 +1218,12 @@ button {
     color: #000;
 }
 
+.videos-feed {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
+
 
 /* ---------------------------*/
 
