--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1256,10 +1256,23 @@ button {
     cursor: pointer;
 }
 
-.mfp-content .popup-content {
-    background: #2d2d2d;
+.mfp-content {
+    width: auto;
     margin: 0 auto;
-    max-width: 500px;
+}
+
+.mfp-content .popup-content {
+    background: #fff;
+    margin: 0 auto;
+    max-width: auto;
+    /* text-align: center; */
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 15px;
+    border-radius: 4px;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
 }
 
 
