--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1240,6 +1240,11 @@ button {
     height: 250px;
     background-size: cover;
     background-position: center center;
+    transition: 300ms ease;
+}
+
+.video:hover {
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.16);
 }
 
 .video .player-icon {
