--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1233,7 +1233,7 @@ button {
 /* ---------------------------*/
 
 
-/*--------- VIDEOS */
+/*--------- VIDEOS POPUP */
 
 
 /* ---------------------------*/
@@ -1271,6 +1271,11 @@ button {
     margin: 0 auto;
 }
 
+.mfp-content .videos-title {
+    padding-top: 10px;
+    padding-left: 10px;
+}
+
 .mfp-content .popup-content {
     background: #fff;
     margin: 0 auto;
@@ -1284,8 +1289,6 @@ button {
     border-radius: 4px;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
 }
-
-.popup-content {}
 
 .popup-content .videos-pic {
     width: 66px;
