--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -944,7 +944,7 @@ button {
 .post-rendered::before {
     width: 10px;
     content: '';
-    background: attr(data-color);
+    background-color: attr(data-color);
     height: 50%;
     position: absolute;
     bottom: -23px;
