--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -962,6 +962,15 @@ button {
     background-position: center center;
     background-size: cover;
     height: 100%;
+    position: relative;
+}
+
+.post-rendered .rendered-img .render-author {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 8px 16px;
 }
 
 .post-rendered .hovered {
