--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -979,9 +979,8 @@ button {
     font-size: 18px;
     color: #fff;
     opacity: 1;
+    font-family: 'Bree Serif', serif;
 }
-
-.post-rendered .rendered-img .render-author {}
 
 .post-rendered .hovered {
     background-color: rgba(0, 0, 0, 0.3);
