--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1369,14 +1369,19 @@ button {
 
 .opinion img {
     vertical-align: top;
+    height: 150px;
 }
 
 .opinion .titulo {
-    padding: 10px;
+    padding: 15px 10px;
+    height: 130px;
+    display: flex;
+    align-items: center;
 }
 
 .opinion .titulo h3 {
     font-size: 22px;
+    margin: 0px !important;
 }
 
 
