--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1349,6 +1349,7 @@ button {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
+    margin-top: -60px;
 }
 
 .opinion-container {
@@ -1365,6 +1366,7 @@ button {
     margin: 10px;
     line-height: 0px;
     font-size: 18px;
+    font-family: 'Bree Serif', serif;
 }
 
 .opinion img {
@@ -1377,6 +1379,7 @@ button {
     height: 130px;
     display: flex;
     align-items: center;
+    font-family: 'Bree Serif', serif;
 }
 
 .opinion .titulo h3 {
