--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1356,6 +1356,10 @@ button {
     border: 2px solid #e7d117;
 }
 
+.opinion {
+    background: #fff;
+}
+
 .opinion .autor {
     background: #b29f93;
     padding: 10px;
