--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1350,6 +1350,7 @@ button {
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
     margin-top: -60px;
+    position: relative;
 }
 
 .opinion-container {
@@ -1373,7 +1374,7 @@ button {
     font-family: 'Bree Serif', serif;
 }
 
-.opinion img {
+.opinion .image {
     vertical-align: top;
     height: 150px;
 }
