--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1395,6 +1395,12 @@ button {
 
 .opinion a {
     display: block;
+    width: 100%;
+    height: 100%;
+    color: #111;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
