--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1421,6 +1421,19 @@ button {
     border-bottom: 2px solid #ccc;
 }
 
+.opinion .hovered {
+    background-color: rgba(0, 0, 0, 0.3);
+    position: relative;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    padding: 10px;
+    opacity: 0;
+    transition: 300ms ease;
+}
+
 
 /* ---------------------------*/
 
