--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1405,9 +1405,12 @@ button {
 
 .opinion .autor a {
     color: #fff !important;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
-.opinion a {
+.opinion .titulo a {
     display: block;
     width: 100%;
     height: 100%;
