--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1486,6 +1486,9 @@ button {
 
 .placa-content {
     padding: 20px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .placa-content img {
