--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1506,6 +1506,11 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px 0;
+}
+
+.placa-image img {
+    vertical-align: top;
 }
 
 
