--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1580,9 +1580,21 @@ button {
 }
 
 .slider-placa-titulo h3 {
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
+}
+
+.slider-placa-imagen {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.slider-placa-imagen img {
+    position: absolute;
+    top: 0px;
+    left: 0px;
 }
 
 
