--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1588,7 +1588,7 @@ button {
 .slider-placa-imagen {
     position: relative;
     width: 100%;
-    height: 100%;
+    min-height: 300px;
 }
 
 .slider-placa-imagen img {
