--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1583,6 +1583,9 @@ button {
     position: absolute;
     top: 0;
     left: 0;
+    opacity: 0;
+    transition: 300ms ease;
+    transform: translateX(-10px);
 }
 
 .placa-like {
@@ -1595,6 +1598,16 @@ button {
     position: absolute;
     left: 48%;
     cursor: pointer;
+    opacity: 0;
+    transition: 300ms ease;
+    transform: translateX(-10px);
+}
+
+.slider-placa-titulo h3.active,
+.slider-placa-titulo i.active {
+    z-index: 5;
+    transform: translateX(0px);
+    opacity: 1;
 }
 
 .slider-placa-imagen {
