--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1818,6 +1818,10 @@ button {
     letter-spacing: 0px !important;
     display: flex !important;
     align-items: center;
+    border-radius: 13px !important;
+    width: 90px !important;
+    line-height: 0px !important;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.16) !important;
 }
 
 .has_twitter {
@@ -1835,6 +1839,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 10px;
 }
 
 
