--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1818,6 +1818,7 @@ button {
     letter-spacing: 0px !important;
     display: flex !important;
     align-items: center;
+    height: auto !important;
     border-radius: 13px !important;
     width: 90px !important;
     line-height: 0px !important;
