--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1819,7 +1819,7 @@ button {
     display: flex !important;
     align-items: center;
     height: auto !important;
-    border-radius: 13px !important;
+    border-radius: 15px !important;
     width: 90px !important;
     line-height: 0px !important;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.16) !important;
@@ -1840,7 +1840,12 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 10px;
+    margin-right: 5px;
+    transition: 300ms ease;
+}
+
+.highlight-and-share-wrapper:hover .fa {
+    width: 100%;
 }
 
 
