--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1813,16 +1813,19 @@ button {
     color: #0099ff !important;
     background: #fff !important;
     font-family: 'Bree Serif', serif !important;
-    font-size: 15px !important;
+    font-size: 16px !important;
     text-transform: lowercase !important;
     letter-spacing: 0px !important;
     display: flex !important;
     align-items: center;
     height: auto !important;
-    border-radius: 15px !important;
-    width: 90px !important;
+    border-radius: 21px !important;
+    width: 110px !important;
     line-height: 0px !important;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.16) !important;
+    position: relative;
+    height: 40px;
+    margin-left: 50px;
 }
 
 .has_twitter {
@@ -1840,8 +1843,9 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 5px;
     transition: 300ms ease;
+    position: absolute;
+    left: 0px;
 }
 
 .highlight-and-share-wrapper:hover .fa {
