--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1823,9 +1823,6 @@ button {
     width: 110px !important;
     line-height: 0px !important;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.16) !important;
-    position: relative;
-    height: 40px;
-    margin-left: 50px;
 }
 
 .has_twitter {
@@ -1843,9 +1840,8 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 5px;
     transition: 300ms ease;
-    position: absolute;
-    left: 0px;
 }
 
 .highlight-and-share-wrapper:hover .fa {
