--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1843,20 +1843,26 @@ button {
     align-items: center;
     margin-right: 5px;
     transition: 300ms ease;
+    z-index: 5;
+    position: relative;
 }
 
 .highlight-and-share-wrapper a:before {
     content: '';
     background: #0099ff;
     width: 0%;
-    transition: 300ms ease;
-    height: 100%;
+    transition: 300ms cubic-bezier(0.26, 0.9, 0.26, 1.05);
+    height: 0;
     position: absolute;
     left: 0;
+    border-radius: 20px;
+    opacity: 0;
 }
 
 .highlight-and-share-wrapper:hover a:before {
     width: 100%;
+    opacity: 1;
+    height: 100%;
 }
 
 
