--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1869,6 +1869,8 @@ button {
     right: 20px;
     transition: 300ms cubic-bezier(0.26, 0.9, 0.26, 1.05);
     z-index: 5;
+    font-size: 14px;
+    opacity: 0;
 }
 
 .highlight-and-share-wrapper:hover a:after {
