--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1832,10 +1832,13 @@ button {
     font-size: 20px;
     border-top: 2px solid #cccccc;
     border-bottom: 2px solid #cccccc;
+    line-height: 20pt
 }
 
 article .post-content {
     margin-left: 50px;
+    line-height: 20pt;
+    font-family: "Lato";
 }
 
 
