--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1843,6 +1843,7 @@ article .post-content {
 article .post-content .has-content-area {
     font-family: "Lato";
     font-size: 15pt;
+    line-height: 22pt;
 }
 
 
