--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1842,7 +1842,7 @@ article .post-content {
 
 article .post-content .has-content-area {
     font-family: "Lato";
-    font-size: 15pt;
+    font-size: 15px;
     line-height: 22pt;
 }
 
