--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1859,7 +1859,7 @@ article .post-content .has-content-area {
 .highlight-and-share-wrapper a:visited {
     padding: 0px !important;
     color: #0099ff !important;
-    background: #fff !important;
+    background: #f5f8fa !important;
     font-family: 'Bree Serif', serif !important;
     font-size: 16px !important;
     text-transform: lowercase !important;
