--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1860,6 +1860,7 @@ article .post-content .has-content-area {
     color: #b29f93;
     border-bottom: 1px solid #fff;
     font-size: 30px;
+    padding: 20px;
 }
 
 
