--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1857,6 +1857,7 @@ article .post-content .has-content-area {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .related-title i {
