--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1902,6 +1902,10 @@ article .post-content .has-content-area {
     margin-left: 50px !important;
 }
 
+#comments .comments-title-wrap {
+    margin: 0px !important;
+}
+
 
 /* TWITTER SHARE */
 
