--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1912,6 +1912,8 @@ article .post-content .has-content-area {
     background: #e7d117;
     color: #fff;
     font-family: "Roboto";
+    font-weight: 400;
+    font-size: 18px;
 }
 
 
